add job task and routes
